.provarCaches/00D410000011HE0EAM/objects/rstkf__apinvdist__c.object
<CustomObject>
    <description>apinvdist__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Internal use only</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_adjhomeamt__c</fullName>
        <description>apinvdist_adjhomeamt__c</description>
        <inlineHelpText>This field carries the home currency amount of this distribution with the sign (+/-) adjusted per the transaction type and DR/CR indicator of the distribution.</inlineHelpText>
        <label>Amount (Home Adjusted)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_adjmaintamt__c</fullName>
        <description>apinvdist_adjmaintamt__c</description>
        <inlineHelpText>This field carries the maintenance currency amount of this distribution with the sign (+/-) adjusted per the transaction type and DR/CR indicator of the distribution.</inlineHelpText>
        <label>Amount (Maintenance Adjusted)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_apaccttype__c</fullName>
        <label>Acct Type Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accrued Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Terms Discount Taken</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange Variance</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Trade Discount</fullName>
                </value>
                <value>
                    <fullName>Cash Account</fullName>
                </value>
                <value>
                    <fullName>Credit Card Clearing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_apinvline__c</fullName>
        <label>Payable Session Line</label>
        <referenceTo>rstkf__apinvline__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_crhomeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit Amount (Home Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_dimvals__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_drcrind__c</fullName>
        <label>Debit  or Credit Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_drhomeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Debit Amount ( Home Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_gltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Transaction</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_homeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount (Home Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_homecurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payables Distributions (Home Currency)</relationshipLabel>
        <relationshipName>apinvdists_home</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_maintamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount (Maintenance Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_maintcurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payables Distributions (Maintenance Currency)</relationshipLabel>
        <relationshipName>apinvdists_maint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_odcid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Direct Charge Code</label>
        <referenceTo>rstk__syodc__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Charge Code associated with this Payable Distribution. It will update Project Cost on vouchers added directly in AP (not added from Purchase Orders).</inlineHelpText>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_sytxncst__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cost Transaction</label>
        <referenceTo>rstk__sytxncst__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_syvatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VAT Class</description>
        <inlineHelpText>VAT Class</inlineHelpText>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>Payables_Distributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_ttapline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payable Detail</label>
        <referenceTo>rstk__ttapline__c</referenceTo>
        <relationshipLabel>Payables Distributions</relationshipLabel>
        <relationshipName>apinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvdist_vattxn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apinvdist_apinvline__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstkf__apinvdist_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__apinvdist_drcrind__c) + &apos;-&apos; + rstkf__apinvdist_glacct__r.rstkf__glacct_acct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payables Distribution</label>
    <listViews>
        <fullName>Payables_Distributions_PK</fullName>
        <columns>rstkf__apinvdist_dimvals__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__apinvdist_apinvline__c</columns>
        <columns>rstkf__apinvdist_seq__c</columns>
        <columns>rstkf__apinvdist_maintamt__c</columns>
        <columns>rstkf__apinvdist_homeamt__c</columns>
        <columns>rstkf__apinvdist_crhomeamt__c</columns>
        <columns>rstkf__apinvdist_drhomeamt__c</columns>
        <columns>rstkf__apinvdist_ttapline__c</columns>
        <columns>rstkf__apinvdist_drcrind__c</columns>
        <columns>rstkf__apinvdist_glacct__c</columns>
        <columns>rstkf__apinvdist_gltxn__c</columns>
        <columns>rstkf__apinvdist_sytxncst__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payables Distributions - PK</label>
    </listViews>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apinvdist_apaccttype__c</columns>
        <columns>rstkf__apinvdist_apinvline__c</columns>
        <columns>rstkf__apinvdist_ttapline__c</columns>
        <columns>rstkf__apinvdist_pjprojwbs__c</columns>
        <columns>rstkf__apinvdist_homeamt__c</columns>
        <columns>rstkf__apinvdist_adjmaintamt__c</columns>
        <columns>rstkf__apinvdist_crhomeamt__c</columns>
        <columns>rstkf__apinvdist_drcrind__c</columns>
        <columns>rstkf__apinvdist_glacct__c</columns>
        <columns>rstkf__apinvdist_gltxn__c</columns>
        <columns>rstkf__apinvdist_vattxn__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payables_Distbccributions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apinvdist_apinvline__c</columns>
        <columns>rstkf__apinvdist_seq__c</columns>
        <columns>rstkf__apinvdist_maintamt__c</columns>
        <columns>rstkf__apinvdist_homeamt__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__apinvdist_gldiv__c</columns>
        <columns>rstkf__apinvdist_glproj__c</columns>
        <columns>rstkf__apinvdist_ttapline__c</columns>
        <columns>rstkf__apinvdist_drcrind__c</columns>
        <columns>rstkf__apinvdist_glacct__c</columns>
        <columns>rstkf__apinvdist_crhomeamt__c</columns>
        <columns>rstkf__apinvdist_drhomeamt__c</columns>
        <columns>rstkf__apinvdist_gltxn__c</columns>
        <columns>rstkf__apinvdist_sytxncst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payables Distributionsbcc</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payables_Distributions</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__apinvdist_ttapline__c</columns>
        <columns>rstkf__apinvdist_apinvline__c</columns>
        <columns>rstkf__apinvdist_maintamt__c</columns>
        <columns>rstkf__apinvdist_homeamt__c</columns>
        <columns>rstkf__apinvdist_drhomeamt__c</columns>
        <columns>rstkf__apinvdist_crhomeamt__c</columns>
        <columns>rstkf__apinvdist_drcrind__c</columns>
        <columns>rstkf__apinvdist_glacct__c</columns>
        <columns>rstkf__apinvdist_gltxn__c</columns>
        <columns>rstkf__apinvdist_sytxncst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payables Distributions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payables_Distributions_Filtered</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__apinvdist_apinvline__c</columns>
        <columns>rstkf__apinvdist_seq__c</columns>
        <columns>rstkf__apinvdist_maintamt__c</columns>
        <columns>rstkf__apinvdist_homeamt__c</columns>
        <columns>rstkf__apinvdist_crhomeamt__c</columns>
        <columns>rstkf__apinvdist_drhomeamt__c</columns>
        <columns>rstkf__apinvdist_ttapline__c</columns>
        <columns>rstkf__apinvdist_drcrind__c</columns>
        <columns>rstkf__apinvdist_glacct__c</columns>
        <columns>rstkf__apinvdist_homecurr__c</columns>
        <columns>rstkf__apinvdist_gltxn__c</columns>
        <columns>rstkf__apinvdist_sytxncst__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>Chandra</value>
        </filters>
        <label>Payables Distributions - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payables Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__Account_Type_Validation</fullName>
        <active>false</active>
        <description>Distribution Account Type must match Line Account Type</description>
        <errorConditionFormula>TEXT(rstkf__apinvdist_apaccttype__c) !=  TEXT(rstkf__apinvdist_apinvline__r.rstkf__apinvline_apaccttype__c)</errorConditionFormula>
        <errorMessage>Distribution Account Type must match Line Account Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__GL_Account_Company</fullName>
        <active>true</active>
        <description>GL Account must belong to the Transaction&apos;s company</description>
        <errorConditionFormula>rstkf__apinvdist_glacct__r.rstkf__glacct_cmpno__c !=  rstkf__apinvdist_apinvline__r.rstkf__apinvline_apinvtxn__r.rstkf__apinvtxn_apinvh__r.rstkf__apinvh_cmpno__c</errorConditionFormula>
        <errorMessage>GL Account must belong to the Transaction&apos;s company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__GL_Account_Type_Validation</fullName>
        <active>false</active>
        <description>GL Account type for Distribution must match GL Account Type for Line</description>
        <errorConditionFormula>TEXT(rstkf__apinvdist_glacct__r.rstkf__glacct_apaccttype__c) !=  TEXT(rstkf__apinvdist_apinvline__r.rstkf__apinvline_dfltglacct__r.rstkf__glacct_apaccttype__c)</errorConditionFormula>
        <errorMessage>GL Account type for Distribution must match GL Account Type for Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__validate_apinvdist_maintamt</fullName>
        <active>false</active>
        <description>Amount (Maintenance Currency) cannot be less than Zero</description>
        <errorConditionFormula>!ISBLANK(rstkf__apinvdist_maintamt__c)  &amp;&amp; rstkf__apinvdist_maintamt__c &lt; 0</errorConditionFormula>
        <errorDisplayField>rstkf__apinvdist_apaccttype__c</errorDisplayField>
        <errorMessage>Amount (Maintenance Currency) cannot be less than Zero</errorMessage>
    </validationRules>
</CustomObject>